--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,10 +2,10 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master]
+    branches: [issue/pkgdown-readme-graphics]
     tags: ['*']
   pull_request:
-    branches: [master, main]
+    branches: [issue/pkgdown-readme-graphics]
 
 name: pkgdown
 
